--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
+    "vite-plugin-vue-devtools": "^7.6.7",
     "vue-tsc": "^2.0.22"
   }
 }
