--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-fs": "^2.0.2",
     "@tauri-apps/plugin-shell": "^2",
+    "@tauri-apps/plugin-sql": "^2.0.2",
     "pinia": "^2.2.8",
     "vue": "^3.3.4",
+    "vue3-snackbar": "^2.3.4",
+    "vue3-toastify": "^0.2.5",
     "vuetify": "^3.7.4"
   },
   "devDependencies": {
