--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project-planning-assistant",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,8 +13,10 @@
     "@egjs/vue3-flicking": "^4.11.4",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-fs": "^2.0.2",
+    "@tauri-apps/plugin-log": "^2.2.0",
     "@tauri-apps/plugin-shell": "^2",
     "@tauri-apps/plugin-sql": "^2.0.2",
+    "@tauri-apps/plugin-updater": "^2.3.0",
     "pinia": "^2.2.8",
     "vue": "^3.3.4",
     "vue3-perfect-scrollbar": "^2.0.0",
@@ -26,9 +28,9 @@
     "@mdi/font": "^7.4.47",
     "@tauri-apps/cli": "^2",
     "@vitejs/plugin-vue": "^5.0.5",
-    "typescript": "^5.2.2",
+    "typescript": "~5.6.3",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.6.7",
-    "vue-tsc": "^2.0.22"
+    "vue-tsc": "^2.1.10"
   }
 }
